[gd_scene load_steps=33 format=1]

[ext_resource path="res://test/scripts/character select screen.gd" type="Script" id=1]
[ext_resource path="res://misc/background.jpg" type="Texture" id=2]
[ext_resource path="res://misc/1p circle.png" type="Texture" id=3]
[ext_resource path="res://misc/2p circle.png" type="Texture" id=4]
[ext_resource path="res://characters/character orbs/orb ena.png" type="Texture" id=5]
[ext_resource path="res://characters/character orbs/orb ethan.png" type="Texture" id=6]
[ext_resource path="res://characters/character orbs/orb amie and aziz.png" type="Texture" id=7]
[ext_resource path="res://characters/character orbs/orb milissa.png" type="Texture" id=8]
[ext_resource path="res://characters/character orbs/orb tambre.png" type="Texture" id=9]
[ext_resource path="res://characters/character orbs/orb kota.png" type="Texture" id=10]
[ext_resource path="res://characters/character orbs/orb grumple v.png" type="Texture" id=11]
[ext_resource path="res://characters/character orbs/orb chrosnow.png" type="Texture" id=12]
[ext_resource path="res://characters/character orbs/orb alisia.png" type="Texture" id=13]
[ext_resource path="res://characters/character orbs/orb maccus.png" type="Texture" id=14]
[ext_resource path="res://characters/character orbs/orb kurtis.png" type="Texture" id=15]
[ext_resource path="res://characters/character orbs/orb joker.png" type="Texture" id=16]
[ext_resource path="res://characters/character orbs/orb jasper.png" type="Texture" id=17]
[ext_resource path="res://characters/character orbs/orb carl.png" type="Texture" id=18]
[ext_resource path="res://characters/character orbs/orb griffenhood.png" type="Texture" id=19]
[ext_resource path="res://characters/character orbs/orb oscar.png" type="Texture" id=20]
[ext_resource path="res://characters/character orbs/orb lucy.png" type="Texture" id=21]
[ext_resource path="res://characters/character orbs/orb dr. cranial.png" type="Texture" id=22]
[ext_resource path="res://characters/character orbs/orb daegel.png" type="Texture" id=23]
[ext_resource path="res://characters/character orbs/orb seilith.png" type="Texture" id=24]
[ext_resource path="res://test/fonts/bigorbit.fnt" type="BitmapFont" id=25]
[ext_resource path="res://icon.png" type="Texture" id=26]
[ext_resource path="res://test/fonts/biggothic.fnt" type="BitmapFont" id=27]
[ext_resource path="res://characters/character art small/ena small.png" type="Texture" id=28]
[ext_resource path="res://characters/character art small/ethan small.png" type="Texture" id=29]
[ext_resource path="res://misc/fgdfg.png" type="Texture" id=30]

[sub_resource type="Animation" id=1]

resource/name = "spin"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "mirrors"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("smoke:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "LoadBoard"
} ]
}

[node name="character select screen" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/scale = Vector2( 1, 1.03152 )
z/z = -2
texture = ExtResource( 2 )
centered = false

[node name="p1select" type="Sprite" parent="."]

transform/pos = Vector2( 815, 210 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 1
texture = ExtResource( 3 )

[node name="p2select" type="Sprite" parent="."]

transform/pos = Vector2( 965, 210 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 1
texture = ExtResource( 4 )

[node name="Ena" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 815, 210 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 5 )

[node name="Ethan" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 965, 210 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 6 )

[node name="Arnie" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 1115, 210 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 7 )

[node name="Milissa" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 660, 360 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 8 )

[node name="Tambre" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 810, 360 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 9 )

[node name="Kota" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 960, 360 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 10 )

[node name="Grumple" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 1110, 360 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 11 )

[node name="Chrosnow" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 1260, 360 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 12 )

[node name="Alisia" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 660, 510 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 13 )

[node name="Maccus" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 810, 510 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 14 )

[node name="Kurtis" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 1115, 510 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 15 )

[node name="Joker" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 1265, 510 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 16 )

[node name="Jasper" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 665, 660 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 17 )

[node name="Carl" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 815, 660 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 18 )

[node name="Griffenhood" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 965, 660 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 19 )

[node name="Oscar" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 1115, 660 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 20 )

[node name="Lucy" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 1265, 660 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 21 )

[node name="Dr Cranial" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 815, 810 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 22 )

[node name="Deagal" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 965, 810 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 23 )

[node name="Seilith" type="Sprite" parent="." groups=[
"character",
]]

transform/pos = Vector2( 1115, 810 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 2
texture = ExtResource( 24 )

[node name="VS" type="Label" parent="."]

rect/scale = Vector2( 0.83, 0.83 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 885.0
margin/top = 485.0
margin/right = 1065.0
margin/bottom = 558.0
custom_fonts/font = ExtResource( 25 )
text = "VS"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="godot" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 605, 130 )
transform/rot = 324.0
texture = ExtResource( 26 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="godot"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/spin = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "spin"

[node name="player1name" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 45.0
margin/top = 895.0
margin/right = 660.0
margin/bottom = 1012.0
custom_fonts/font = ExtResource( 27 )
text = "Ena"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player2name" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1305.0
margin/top = 895.0
margin/right = 1900.0
margin/bottom = 1012.0
custom_fonts/font = ExtResource( 27 )
text = "Ethan"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player1choice" type="Sprite" parent="."]

transform/pos = Vector2( 340, 520 )
texture = ExtResource( 28 )

[node name="player2choice" type="Sprite" parent="."]

transform/pos = Vector2( 1615, 520 )
texture = ExtResource( 29 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
custom_colors/font_color = Color( 1, 0.9375, 0, 1 )
text = "mipmaps: off"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="smoke" type="Sprite" parent="."]

transform/pos = Vector2( 960, 540 )
z/z = 2
texture = ExtResource( 30 )
modulate = Color( 1, 1, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/mirrors = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


